   to the rounding. The old version was sometimes correct, sometimes off by pi,
   and sometimes very inaccurate. Also add more tests.

 * Make it clearer in Math::BigFloat->bpi() when it is called as a method vs.
   as a function.

 * The Math::BigFloat->bpi() method can now be used as an instance method to
   assign pi to $x, as in $x->bpi().

 * Add tests for as_oct().

 * Minor simplifications in Math::BigInt->as_oct() and
   Math::BigInt::Calc::_as_oct().

2016-01-05 v1.999715 pjacklam

 * Fix Math::BigFloat->bexp() based on patch by DANAJ (Dana Jacobsen).

 * Add Math::BigFloat->bexp() tests to "t/biglog.t" and new file
   "t/author-bexp-mbf.t".

 * Fix flawed test in test_bpow. It used ok($x, $y) rather than is($x, $y).

 * Add better descriptions (test names) to a few tests.

 * Wrap long line in the CHANGES file.

2016-04-03 v1.999716 pjacklam

 * $x->new(...) can no longer be used to assign a value to $x. This was a
   mistake introduced in v1.999712. As the name "new" implies, it should always
   return a new object.

 * Using new() with no argument no longer gives a warning. This use has been
   discouraged, in favour of bzero(), for many years, but people are still
   using it, so I am reintroducing the support for this.

 * Added btdiv() and btmod() for truncated division (T-division) and ditto
   remainder. Add tests.

 * Add test files author-bmod-bdiv-mbi.t author-btmod-btdiv-mbi.t with more
   thorough testing of bdiv(), bmod(), btdiv(), and btmod().

 * When new() is used as an instance method, the new object is initialized as a
   copy of the invocand.

 * Move test for numfiy() of +Inf, -Inf, NaN, and big integers from
   bigfltpm.inc and bigintpm.inc into author-numify-mbi.t and
   author-numify-mbf.t.

 * Improved wording and fixed typos in earlier changelog entries.

Please send us test-reports, your experiences with this and your ideas - we love
to hear about our work!

The Math-BigInt developers <bignum@lists.scsys.co.uk>